@@ -9,10 +9,6 @@ environment:
       MINICONDA: C:\Miniconda
     - PYTHON_VERSION: 2.7
       MINICONDA: C:\Miniconda-x64
-    - PYTHON_VERSION: 3.4
-      MINICONDA: C:\Miniconda3
-    - PYTHON_VERSION: 3.4
-      MINICONDA: C:\Miniconda3-x64
     - PYTHON_VERSION: 3.5
       MINICONDA: C:\Miniconda35
     - PYTHON_VERSION: 3.5
@@ -44,8 +40,8 @@ test_script:
   - "python setup.py test"
 
 after_test:
-  - "python setup.py bdist_wheel"
+  - "python setup.py bdist_wheel bdist_wininst"
 
 artifacts:
-  # bdist_wheel puts your built wheel in the dist directory
+  # make available the content of the dist directory
   - path: dist\*
